# AAN-Z

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  qrc.qrc
AAN-Z-APP/: CMakeLists.txt  QML.qrc  main.cpp  main.qml
AAN-Z-APP/c++/logic/Bisection/Bisection/: main.cpp
AAN-Z-APP/c++/logic/Euler_Method/Differential_Methods/: main.cpp
AAN-Z-APP/c++/logic/Hermit/Hermit/: main.cpp
AAN-Z-APP/c++/logic/Householder/Householder/: main.cpp
AAN-Z-APP/c++/logic/Lagrange/Lagrange/: main.cpp
AAN-Z-APP/c++/logic/Neville/Neville/: main.cpp
AAN-Z-APP/c++/logic/Newton_Method/Newton_Method/: main.cpp
AAN-Z-APP/c++/logic/Num_Integration/Num_Integration/: main.cpp
AAN-Z-APP/ui/Horner/: Horner.qml
AAN-Z-APP/ui/Num_Systems/: Num_Systems.qml
LOGIC/Horner/Horner/: main.cpp
LOGIC/Newton/Newton/: main.cpp
LOGIC/Num_Systems/Num_Systems/: main.cpp
